[package]
name = "serde-hex"
version = "0.1.0"
authors = ["Forrest Marshall <fourthetrees@gmail.com>"]
description = "Hexadecimal encoding/decoding with serde."
documentation = "https://docs.rs/serde-hex"
repository = "https://github.com/forrest-marshall/serde-hex.git"
keywords = ["serde","hex","hexadecimal"]
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
array-init = "1.0.0"
smallvec = { version = "1.4.2", features = ["write"] }
serde = "1.0.117"

[dev-dependencies]
serde_derive = "1.0.117"
serde_json = "1.0.59"
